Added some links and informative info, plus a help section and a link to show/hide it, at the top of cmdlist.html.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -32,7 +32,7 @@
 <div class="col-five">
 
   <h2 class="top">Learn How To Use Ubiquity</h2>
-<div id="interactive-tutorial-div" style="border-style:solid;   border-color:green; padding: 2em; font-size: 150%;">
+<div id="interactive-tutorial-div" class="ubiq-tutorial">
     <a onclick="startUbiqTutorial();">Click Here to Take the Interactive Tutorial</a>
 </div>
 
