Added some copy to the about:jetpack page.

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -14,7 +14,7 @@ Editor</a> and set the feed type to "Jetpack"; to effect your changes,
 just reload any webpage or activate and then dismiss the Ubiquity
 command prompt&mdash;no saving is necessary.</p>
 <p>Here's a <span class="buttony" id="display-sample">sample Jetpack
-feed</span> to get you started.</p>
+feed</span> to get you started. We'll have a real tutorial up soon.</p>
 <div id="sample-code" class="sample code"
   style="display: none;">addStatusBarPanel({
   html: "&lt;p&gt;kill flash&lt;/p&gt;",
