Added a mention about hacking Jetpack.

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -27,6 +27,10 @@ feed</span> to get you started. We'll have a real tutorial up soon.</p>
     });
   }});
 </div>
+<p>If you want to hack on the Jetpack platform itself, the vast
+majority of it is contained in the source code for this page. Just
+make local changes to the file or one of the scripts it refers to and
+reload this page.</p>
 <h2>Debugging Information</h2>
 <p>These are the Jetpacks that are currently installed.</p>
 <div id="jetpacks"></div>
