Typo fix in CSS selector
--HG--
extra : rebase_source : 5b1b3f600057d5dbfbe6453c489586a95a6a8d78

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -23,7 +23,7 @@ feed</span> to get you started. We'll have a real tutorial up soon.</p>
     button.css({cursor: "pointer", fontFamily: "sans-serif"});
     button.click(function() {
       var doc = $(Application.activeWindow.activeTab.document);
-      doc.find("embed[type=application/x-shockwave-flash]").slideUp();
+      doc.find("embed[type=application\\/x-shockwave-flash]").slideUp();
     });
   }});
 </div>
