Modified twitter.js to use jQuery.

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -56,6 +56,7 @@ problems and inspect live objects.</p>
 <script src="js/observe.js"></script>
 <script src="js/status-bar-panel.js"></script>
 <script src="js/jetpack-library.js"></script>
+<script src="js/twitter.js"></script>
 <script src="js/jetpack.js"></script>
 <script src="js/test.js"></script>
 <script src="js/tests/test_log.js"></script>
