--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -16,7 +16,7 @@ command prompt&mdash;no saving is necessary.</p>
 <p>Here's a <span class="buttony" id="display-sample">sample Jetpack
 feed</span> to get you started. We'll have a real tutorial up soon.</p>
 <div id="sample-code" class="sample code"
-  style="display: none;">addStatusBarPanel({
+  style="display: none;">Jetpack.statusBar.append({
   html: "&lt;p&gt;kill flash&lt;/p&gt;",
   onLoad: function(panel) {
     var button = $(panel).find("p");
