--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -7,6 +7,25 @@
   <title>I am Jetpack.</title>
 </head>
 <body>
+<div class="sidebar">
+  <h2>This is a very special page.</h2>
+  <p>This page actually houses the Jetpack platform. All your Jetpacks
+  are loaded in this page, and you can even use Firebug to inspect
+  their current state.</p>
+  <p>As a result, the lifetime of your Jetpacks is tied to the
+  lifetime of this page. When you reload this page, for instance, all
+  your Jetpacks are reloaded. This means that the time between making
+  a change to a Jetpack and seeing its effects is as small as
+  possible&mdash;you never have to restart your browser.</p>
+  <p>Because it only makes sense for one instance of Jetpack to exist
+  at a time, this page is what developers call a <i>Singleton</i>:
+  only one instance of it can exist at once.  Try opening this URL in
+  two tabs at once and see what happens!</p>
+  <p>Finally, the Jetpack singleton always exists, since users
+  obviously need to be able to use their Jetpacks without having
+  Jetpack open in a tab.  If you close the Jetpack tab, it'll actually
+  re-open in a hidden browser that you can't see.</p>
+</div>
 <h1>I am Jetpack.</h1>
 <p>If you want to create a Jetpack feed, use the <a
 href="chrome://ubiquity/content/editor.html">Ubiquity Command
@@ -40,7 +59,6 @@ reload this page.</p>
   <span class="buttony" id="force-gc">force garbage collection</span>
   <span class="buttony" id="run-tests">run test suite</span>
 </p>
-<p>Reloading this page will reload Jetpack.</p>
 <p id="firebug-not-found" class="warning">You either don't have
 Firebug installed, or you don't have it enabled for this page, so all
 logging messages will appear in the <span class="buttony"
