Added a warning that tells the user to upgrade to firefox 3.5 beta for much easier debugging of Jetpacks. Also made the firebug-not-detected warning more helpful.

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -7,13 +7,20 @@
   <title>I am Jetpack.</title>
 </head>
 <body>
-<p id="firebug-not-found" class="warning">You either don't have
-Firebug installed, or you don't have it enabled for this page, so all
-logging messages will appear in the <span class="logging-source"></span>. If you <a
-href="http://www.getfirebug.com">get Firebug</a> and enable it for
-this page, and then reload this page, all logging messages will be
-logged to the Firebug Console, where it's much easier to debug
-problems and inspect live objects.</p>
+<p id="old-firefox-version" class="warning">You appear to be running
+Firefox 3 or earlier, which means that any logging messages or
+errors produced by your Jetpacks will reference the wrong line numbers.
+This makes debugging Jetpacks difficult; please consider using <a
+href="http://www.mozilla.com/en-US/firefox/all-beta.html">Firefox 3.5
+Beta</a>.</p>
+<p id="firebug-not-found" class="warning">You either don't have the
+latest version of Firebug installed, or you don't have it enabled for
+this page, so all logging messages will appear in the <span
+class="logging-source"></span>. If you get <a
+href="http://getfirebug.com/releases/index.html">Firebug 1.4 Alpha</a>
+and enable it for this page, and then reload this page, all logging
+messages will be logged to the Firebug Console, where it's much easier
+to debug problems and inspect live objects.</p>
 <div class="sidebar">
   <h2>This is a very special page.</h2>
   <p>This page actually houses the Jetpack platform. All your Jetpacks
