--- a/ubiquity/chrome/content/suggest.html
+++ b/ubiquity/chrome/content/suggest.html
@@ -6,5 +6,5 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 </head>
-<body></body>
+<body id="suggestions"></body>
 </html>
