Added tab.contentWindow and tab.contentDocument to new jetpack library.
--HG--
extra : rebase_source : ddc277db324a8a973d136e52b1126b7a56796cab

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -82,17 +82,22 @@ you'll be able to run the test suites for individual Jetpacks
 here.</p>
 <p>All output for the suites is sent to the <span
 class="logging-source"></span>.</p>
-<!-- Load scripts, etc. for the extension here. -->
+<!-- Jetpack Platform Foundation -->
 <script src="js/init-extension.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/log.js"></script>
 <script src="js/observe.js"></script>
+<!-- Jetpack Libraries -->
 <script src="js/status-bar-panel.js"></script>
 <script src="js/jetpack-library.js"></script>
 <script src="js/twitter.js"></script>
 <script src="js/jetpack.js"></script>
+<!-- Test Framework and Suites -->
 <script src="js/test.js"></script>
 <script src="js/tests/test_log.js"></script>
+<!-- Page Interaction -->
 <script src="js/app.js"></script>
+<!-- Works in Progress -->
+<script src="js/new-jetpack-library.js"></script>
 </body>
 </html>
