--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -61,8 +61,9 @@ feed</span> to get you started. We'll have a real tutorial up soon.</p>
   }});
 </div>
 <p>If you want to hack on the Jetpack platform itself, the vast
-majority of it is contained in the source code for this page. Just
-make local changes to the file or one of the scripts it refers to and
+majority of it is contained in the <span class="buttony"
+id="this-page-source-code">source code for this page</span>. Just make
+local changes to the file or one of the scripts it refers to and
 reload this page.</p>
 <h2>Installed Jetpacks</h2>
 <p>These are the Jetpacks that are currently installed.</p>
