--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -32,7 +32,7 @@ to debug problems and inspect live objects.</p>
   a change to a Jetpack and seeing its effects is as small as
   possible&mdash;you never have to restart your browser.</p>
   <p>Because it only makes sense for one instance of Jetpack to exist
-  at a time, this page is what developers call a <i>Singleton</i>:
+  at a time, this page is what developers call a <i>singleton</i>:
   only one instance of it can exist at once.  Try opening this URL in
   two tabs at once and see what happens!</p>
   <p>Finally, the Jetpack singleton always exists, since users
