Added a lot of content and some cool (canvas) arrows to the tutorial.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -31,12 +31,12 @@
 
 <div class="col-five">
 
-  <h2 class="top">Learn How To Use Ubiquity</h2>
+<h2 class="top">Learn How To Use Ubiquity</h2>
+  <span id="debug"></span>
 <div id="interactive-tutorial-div" class="ubiq-tutorial">
     <a onclick="startUbiqTutorial();">Click Here to Take the Interactive Tutorial</a>
 </div>
-
-
+<div id="canvas-goes-here"></div>
 </div>
 
 
