Minor style changes.

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -73,7 +73,7 @@ reload this page.</p>
 one of these numbers never goes down, then your Jetpack either has a
 memory leak or isn't using memory very effectively.</p>
 <div id="extension-weakrefs"></div>
-<p>
+<p id="memory-usage-actions"p>
   <span class="buttony" id="force-gc">force garbage collection</span>
 </p>
 <h2>Test Suites</h2>
