Added a memory tracking call for jQuery.

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -86,6 +86,7 @@ class="logging-source"></span>.</p>
 <!-- Jetpack Platform Foundation -->
 <script src="js/init-extension.js"></script>
 <script src="js/jquery.js"></script>
+<script>MemoryTracking.track(jQuery, "jQuery");</script>
 <script src="js/log.js"></script>
 <script src="js/observe.js"></script>
 <!-- Jetpack Libraries -->
