--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -55,7 +55,7 @@ feed</span> to get you started. We'll have a real tutorial up soon.</p>
     var button = $(panel).find("p");
     button.css({cursor: "pointer", fontFamily: "sans-serif"});
     button.click(function() {
-      var doc = $(Application.activeWindow.activeTab.document);
+      var doc = $(Jetpack.tabs.focused.contentDocument);
       doc.find("embed[type=application\\/x-shockwave-flash]").slideUp();
     });
   }});
