Renamed the Jetpack module to JetpackRuntime, to avoid confusion with the Jetpack namespace that Jetpacks have access to. Also added a new file, jquery-setup.js, that performs a number of jQuery-specific setup tasks.
--HG--
extra : rebase_source : 3352dbfbf431de3de663fd575af9295e0847b8bb

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -86,14 +86,14 @@ class="logging-source"></span>.</p>
 <!-- Jetpack Platform Foundation -->
 <script src="js/init-extension.js"></script>
 <script src="js/jquery.js"></script>
-<script>MemoryTracking.track(jQuery, "jQuery");</script>
+<script src="js/jquery-setup.js"></script>
 <script src="js/log.js"></script>
 <script src="js/observe.js"></script>
 <!-- Jetpack Libraries -->
 <script src="js/status-bar-panel.js"></script>
 <script src="js/twitter.js"></script>
 <script src="js/jetpack-library.js"></script>
-<script src="js/jetpack.js"></script>
+<script src="js/jetpack-runtime.js"></script>
 <!-- Test Framework and Suites -->
 <script src="js/test.js"></script>
 <script src="js/tests/test_log.js"></script>
