Added a link to the Ubiquity Commands page for unsubscribing to Jetpacks.

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -68,6 +68,8 @@ reload this page.</p>
 <h2>Installed Jetpacks</h2>
 <p>These are the Jetpacks that are currently installed.</p>
 <div id="jetpacks"></div>
+<p>You can manage these at <a
+href="chrome://ubiquity/content/cmdlist.html">Ubiquity Commands</a>.</p>
 <h2>Memory Usage</h2>
 <p>Below is a list of all live objects being tracked by Jetpack. If
 one of these numbers never goes down, then your Jetpack either has a
