Renamed test_log.js to test-log.js for consistency.
--HG--
rename : ubiquity/jetpack/content/js/tests/test_log.js => ubiquity/jetpack/content/js/tests/test-log.js

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -98,7 +98,7 @@ class="logging-source"></span>.</p>
 <script src="js/jetpack-runtime.js"></script>
 <!-- Test Framework and Suites -->
 <script src="js/test.js"></script>
-<script src="js/tests/test_log.js"></script>
+<script src="js/tests/test-log.js"></script>
 <!-- Page Interaction -->
 <script src="js/app.js"></script>
 </body>
