--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -99,6 +99,7 @@ class="logging-source"></span>.</p>
 <!-- Test Framework and Suites -->
 <script src="js/test.js"></script>
 <script src="js/tests/test-log.js"></script>
+<script src="js/tests/test-jetpack-library.js"></script>
 <!-- Page Interaction -->
 <script src="js/app.js"></script>
 </body>
