Broke tutorial into sections with a table of contents.  Added some 'what is ubiquity' text to the front page.  Expanded tutorial contents.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -26,21 +26,39 @@
 </div>
 
 <br clear="all"/>
-<div style="text-align:center;"><p>You can get to this page at any time using the "Help" command.</p></div>
+<div style="text-align:center;" class="not-the-tutorial">
+  <p>You can get to this page at any time using the "Help" command.</p></div>
 <br clear="all"/>
 
 <div class="col-five">
 
-<h2 class="top">Learn How To Use Ubiquity</h2>
+<div class="not-the-tutorial">
+  <h2 class="top">What is Ubiquity?</h2>
+
+  <p>Ubiquity is a Firefox add-on that lets you give <b>commands</b> to
+  Firefox by entering command words into a special input box.</p>
+  <p>Commands are shortcuts for things that you commonly do on
+  the Web; they can eliminate repetitive tasks and let you get more done,
+  faster.</p>
+  <p>The coolest thing about Ubiquity is that <i>anyone</i> can write a
+  command and share it with the rest of the world, in much the same way as
+  the Web itself lets everyone write pages and share information with the rest
+  of the world.</p>
+  <!-- todo: an animated gif here? -->
+</div>
+   <h2 class="not-the-tutorial">Learn How To Use Ubiquity</h2>
   <span id="debug"></span>
-<div id="interactive-tutorial-div" class="ubiq-tutorial">
+<div id="interactive-tutorial-div">
+  <div id="tutorial-instructions-div" class="ubiq-tutorial">
     <a onclick="startUbiqTutorial();">Click Here to Take the Interactive Tutorial</a>
+  </div>
+  <div id="tutorial-contents-div"></div>
 </div>
 <div id="canvas-goes-here"></div>
 </div>
 
 
-<div class="col-four" id="not-the-tutorial">
+<div class="col-four not-the-tutorial">
     
   <h2 class="top">More On Using Ubiquity</h2>
     
