Added a status bar panel test, as well as a mechanism for a test to specify some margin of error when detecting memory leaks.

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -176,6 +176,7 @@
 <script src="js/test.js"></script>
 <script src="js/tests/test-log.js"></script>
 <script src="js/tests/test-jetpack-library.js"></script>
+<script src="js/tests/test-status-bar-panel.js"></script>
 <!-- Page Interaction -->
 <script src="js/app.js"></script>
 <script src="js/jquery.tabs.pack.js"></script>
