Finished contents of basic tutorial.  (Still needs polish.)

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -52,6 +52,7 @@
   <div id="tutorial-instructions-div" class="ubiq-tutorial">
     <a onclick="startUbiqTutorial();">Click Here to Take the Interactive Tutorial</a>
   </div>
+  <br clear="all"/>
   <div id="tutorial-contents-div"></div>
 </div>
 <div id="canvas-goes-here"></div>
