Added dictionary test, as well as a few more bells and whistles to the test framework.
The jQuery tabs extension was somehow messing things up so that Firebug's console re-injected itself into the page after we installed our custom console handler. Addtionally, the new tab structure had broken up the page such that the orange warnings weren't showing when they were supposed to, and broke up information so that Jetpack was harder to debug than it used to be. As such, I've reverted back to the old single-page design, which fixes the console issue; we may want to consider just separating the user-facing page from the developer dashboard/jetpack runtime entirely.

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -12,14 +12,6 @@
 <img src="gfx/jetpack.png"/><br/>  
   
 <div id="container">
-  <ul>
-      <li><a href="#welcome"><span>Welcome</span></a></li>
-      <li><a href="#develop"><span>Develop</span></a></li>
-      <li><a href="#installed"><span>Installed Features</span></a></li>
-      <li><a href="#memory"><span>Memory Usage</span></a></li>
-      <li><a href="#tests"><span>Test Suite</span></a></li>      
-  </ul>
-  
   <!-- WELCOME -->
   <div id="welcome">
     <h1>I am Jetpack. Welcome.</h1>
@@ -49,7 +41,7 @@
   
   <!-- DEVELOP -->
   
-  <div id="develop">    
+  <div id="develop">
     <p id="old-firefox-version" class="warning">You appear to be running
     Firefox 3 or earlier, which means that any logging messages or
     errors produced by your Jetpacks will reference the wrong line numbers.
@@ -88,7 +80,8 @@
       <p>Read the <a href="chrome://ubiquity/content/file.html#index.html#jetpack/content/js/jetpack-library-doc.js">Jetpack Library documentation</a>.</p>
   
     </div>
-        
+    <h2>Developing With Jetpack</h2>
+    
     <p>If you want to create a Jetpack feed, use the <a
     href="chrome://ubiquity/content/editor.html">Ubiquity Command
     Editor</a> and set the feed type to "Jetpack"; to effect your changes,
@@ -157,8 +150,6 @@
   </div>  
 </div>
 
-
-
 </div>
 
 <!-- Jetpack Platform Foundation -->
@@ -179,9 +170,6 @@
 <script src="js/tests/test-status-bar-panel.js"></script>
 <!-- Page Interaction -->
 <script src="js/app.js"></script>
-<script src="js/jquery.tabs.pack.js"></script>
-
-<script>jQuery("#container").tabs()</script>
 
 </body>
 </html>
