It's now possible to install/uninstall Jetpacks from about:jetpack.

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -130,11 +130,15 @@
   <!-- INSTALLED -->
   
   <div id="installed">
-    <h2>Installed Jetpack Features</h2>
-    <p>These are the Jetpack Features that are currently installed.</p>
-    <div id="jetpacks"></div>
-    <p>You can manage these at <a
-    href="chrome://ubiquity/content/cmdlist.html">Ubiquity Commands</a>.</p>
+    <h2>Your Jetpack Features</h2>
+    <div id="installed-jetpacks" class="jetpack-list">
+      <p>These are the Jetpack Features that are currently installed.</p>
+    </div>
+    <div id="uninstalled-jetpacks" class="jetpack-list">
+      <p>These are recently-uninstalled Jetpack Features. You can reinstall
+      them easily from here, or you can purge them from this list so they
+      no longer clutter this page.</p>
+    </div>
   </div>
   
   <!-- TESTS -->
