Added [view source] and [uninstall] to skinlist.

--- a/ubiquity/chrome/content/skinlist.html
+++ b/ubiquity/chrome/content/skinlist.html
@@ -16,7 +16,8 @@
   <script src="resource://ubiquity/scripts/jquery.js"></script>
   <script type="application/javascript;version=1.8"
           src="chrome://ubiquity/content/header.js"></script>
-  <script src="skinlist.js"></script>
+  <script type="application/javascript;version=1.8"
+          src="skinlist.js"></script>
 
   <div class="head">
     <span class="large">Ubiquity:&nbsp;</span>
