--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -12,6 +12,14 @@
 <img src="gfx/jetpack.png"/><br/>  
   
 <div id="container">
+  <ul>
+    <li><a href="#welcome"><span>Welcome</span></a></li>
+    <li><a href="#develop"><span>Develop</span></a></li>
+    <li><a href="#installed"><span>Installed Features</span></a></li>
+    <li><a href="#memory"><span>Memory Usage</span></a></li>
+    <li><a href="#tests"><span>Test Suite</span></a></li>      
+  </ul>  
+  
   <!-- WELCOME -->
   <div id="welcome">
     <h1>I am Jetpack. Welcome.</h1>
@@ -194,6 +202,24 @@
 <script src="js/tests/test-status-bar-panel.js"></script>
 <!-- Page Interaction -->
 <script src="js/app.js"></script>
+<script src="js/jquery.tabs.js"></script>
+
+<script>$("#container").tabs()</script>
+<script>
+// Save the tab choice so that it is maintained across reloads.
+var Application = Components.classes["@mozilla.org/fuel/application;1"].getService(Components.interfaces.fuelIApplication);
+
+if( Application.storage.has("jetpack-tab") ){
+  var selectedTabId = Application.storage.get("jetpack-tab", null);
+  $("a[href='" + selectedTabId + "']").click();
+}
+
+$(window).unload(function(){
+  var selectedTabId = $(".tabs-selected").find("a").attr("href");
+  Application.storage.set("jetpack-tab", selectedTabId);  
+})
+</script>
+
 
 </body>
 </html>
