Added two demos: The UnAd jetpack, and the Gmail checker jetpack!

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -43,6 +43,11 @@
     <h2>Demo Jetpack Features</h2>
     
     <p>Links to demos go here.</p>
+    
+    <ul>
+      <li><a href="chrome://jetpack/content/demos/unad-install.html">UnAd</a> &mdash; Removes ads that slow the internet.</li>
+      <li><a href="chrome://jetpack/content/demos/gmail-checker-install.html">Gmail Checker</a> &mdash; How much mail have you got?</li>
+    <ul>
   
   </div>
   
