updating onSuggestionsUpdated to make all suggestion displays async; new-parser: updating email.js and social.js so they don't assume the object in preview

--- a/ubiquity/modules/parser/new/index.html
+++ b/ubiquity/modules/parser/new/index.html
@@ -119,7 +119,7 @@
     <input type='checkbox' value='adjust' name='adjust' id='adjust'>adjust input widths (buggy!)</input>-->
     <br/>
     <input type='button' name='clearnouncache' value='clear noun cache' id='clearnouncache'></input>
-    <label title='the higher the threshold, the fewer suggestions returned and the faster the scoring' for='threshold'>score > </label><input id='threshold' value='0.3' size='3'/> <label for='maxSuggestions'>max suggestions:</label><input id='maxSuggestions' value='5' size='2'/>
+    <label for='maxSuggestions'>max suggestions:</label><input id='maxSuggestions' value='5' size='2'/>
     <input type='checkbox' name='displayparseinfo' id='displayparseinfo'></input><label title='this will slow things down considerably' for='displayparseinfo'>display parse info</label>
     <input type='checkbox' name='async' id='async'></input><label for='async'>use async parsing</label><br/><br/>
 
