--- a/ubiquity/chrome/content/skinlist.html
+++ b/ubiquity/chrome/content/skinlist.html
@@ -18,6 +18,8 @@
           src="chrome://ubiquity/content/header.js"></script>
   <script type="application/javascript;version=1.8"
           src="skinlist.js"></script>
+  <script type="application/javascript;version=1.8"
+          src="prefkeys.js"></script>
 
   <div class="head">
     <span class="large">Ubiquity:&nbsp;</span>
