--- a/ubiquity/modules/parser/new/index.html
+++ b/ubiquity/modules/parser/new/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Ubiquity Parser 2 Playpen</title>
-    <script type="text/javascript;version=1.8" charset='utf-8' src='jquery-1.3.2.js'></script>
+    <script type="text/javascript;version=1.8" charset='utf-8' src='resource://ubiquity/scripts/jquery.js'></script>
     <script type="text/javascript;version=1.8" charset='utf-8' src='setup.js'></script>
     <style type="text/css">
 			body {
