--- a/ubiquity/chrome/content/settings.html
+++ b/ubiquity/chrome/content/settings.html
@@ -17,7 +17,7 @@
   <script type="application/javascript;version=1.8"
           src="chrome://ubiquity/content/header.js"></script>
   <script type="application/javascript;version=1.8"
-          src="skinlist.js"></script>
+          src="settings.js"></script>
   <script type="application/javascript;version=1.8"
           src="prefkeys.js"></script>
 
@@ -30,7 +30,7 @@
 
   <br clear="all"/>
   <div style="text-align:center;">
-    <p>You can get to this page at any time using the "skin-list" command.</p>
+    <p>You can get to this page at any time using the "settings" command.</p>
   </div>
   <br clear="all"/>
 
